package pl.edu.agh.po;

import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;

public class BusinessManager {
    private static BusinessManager instance;

    private BusinessManager(){}

    public static BusinessManager getInstance(){
        if (instance == null){
            instance = new BusinessManager();
        }
        return instance;
    }

    public String generateFullRaport(){
        StringBuilder report = new StringBuilder();
        
        report.append("# Full RouterPOL raport");
        report.append("generated at: ").append(LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm"))).append("\n");
        report.append("generated by:").append(AuthenticationService.getInstance().getCurrentUser().getUsername()).append("\n");
        report.append("─".repeat(65)).append("\n\n");
        report.append("## Numbers summary\n");
        report.append("There is: ").append(UserDAO.getInstance().findALL().size()).append(" registered users.\n");
        report.append("There is: ").append(DeviceDAO.getInstance().findAll().size()).append(" devices.\n");
        report.append("─".repeat(65)).append("\n");
        
        return report.toString();
    }
}
