package pl.edu.agh.po;

public enum DeviceStatus {
    AVAILABLE,
    BROKEN,
    MAINTANCE,
    IN_USE
}
