package pl.edu.agh.po;

public enum DeviceType {
    ROUTER,
    SWITCH,
    ACCESS_POINT
}
