package pl.edu.agh.po;

import javax.xml.transform.Result;
import java.sql.Statement;
import java.util.ArrayList;
import java.util.List;
import java.sql.Connection;
import java.sql.DriverManager;
import java.sql.PreparedStatement;
import java.sql.ResultSet;
import java.sql.SQLException;

public class UserDAO {
    private static UserDAO instance;
    private static Connection connection;
    
    private UserDAO(){
        try{
            connection = DriverManager.getConnection("jdbc:sqlite:rp.db");
            createTable();
        }
        catch (SQLException e){
            e.printStackTrace();
        }
    }
    public static UserDAO getInstance(){
        if (instance == null){
            instance = new UserDAO();
        }
        return instance;
    }
    private void createTable(){
        String sql = """
                CREATE TABLE IF NOT EXISTS users (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                username TEXT NOT NULL UNIQUE,
                password TEXT NOT NULL,
                role TEXT NOT NULL
                );
                """;
        try (Statement stmt = connection.createStatement()){
            stmt.execute(sql);
            boolean isAdminExists = false;
            try(ResultSet rs = stmt.executeQuery("SELECT 1 FROM users WHERE username = 'admin1'"))
            {
                if(rs.next())
                {
                    isAdminExists = true;
                }
            }
            if(!isAdminExists)
            {
                User admin = new User(0L, "admin1", "admin1", UserRole.ADMIN);
                save(admin);
            }

        }
        catch (SQLException e){
            e.printStackTrace();
        }
    }
    public User findByID(long ID){
        String sql = "SELECT * FROM users WHERE id = ?";
        try (PreparedStatement pstmt = connection.prepareStatement(sql)){
            pstmt.setLong(1, ID);
            ResultSet rs = pstmt.executeQuery();
            if (rs.next() == true){
                return new User(rs.getLong("id"),
                        rs.getString("username"),
                        rs.getString("password"),
                        UserRole.valueOf(rs.getString("role")));
            }
        }
        catch (SQLException e){
            e.printStackTrace();
        }
        return null;
    }
    public User findByUsername(String username){
        String sql = "SELECT * FROM users WHERE username = ?";
        try (PreparedStatement pstmt = connection.prepareStatement(sql)){
            pstmt.setString(1, username);
            ResultSet rs = pstmt.executeQuery();
            if (rs.next() == true){
                return new User(rs.getLong("id"),
                        rs.getString("username"),
                        rs.getString("password"),
                        UserRole.valueOf(rs.getString("role")));
            }
        }
        catch (SQLException e){
            e.printStackTrace();
        }
        return null;
    }
    public User findByRole(UserRole role){
        String sql = "SELECT * FROM users WHERE role = ?";
        try (PreparedStatement pstmt = connection.prepareStatement(sql)){
            pstmt.setString(1, role.name());
            ResultSet rs = pstmt.executeQuery();
            if (rs.next() == true){
                return new User(rs.getLong("id"),
                        rs.getString("username"),
                        rs.getString("password"),
                        UserRole.valueOf(rs.getString("role")));
            }
        }
        catch (SQLException e){
            e.printStackTrace();
        }
        return null;
    }
    public List<User> findALL(){
        String sql = "SELECT * FROM users";
        List<User> users = new ArrayList<>();
        try (PreparedStatement pstmt = connection.prepareStatement(sql)){
            ResultSet rs = pstmt.executeQuery();
            while (rs.next() == true){
                users.add(new User(rs.getLong("id"), rs.getString("username"), rs.getString("password"), UserRole.valueOf(rs.getString("role"))));
            }
        }
        catch (SQLException e){
            e.printStackTrace();
        }
        return users;
    }
    public void save(User user){
        String sql = "INSERT INTO users ('username', 'password', 'role') VALUES (?, ?, ?)";
        try (PreparedStatement pstmt = connection.prepareStatement(sql)){
            pstmt.setString(1, user.getUsername());
            pstmt.setString(2, PasswordEncryption.hash(user.getPassword()));
            pstmt.setString(3, user.getRole().name());
            pstmt.execute();
        }
        catch (SQLException e){
            e.printStackTrace();
        }
    }
    public void deleteByID(long ID){
        String sql = "DELETE FROM users WHERE id = ?";
        try (PreparedStatement pstmt = connection.prepareStatement(sql)) {
            pstmt.setLong(1, ID);
            pstmt.execute();
        } catch (Exception e) {
            e.printStackTrace();
        }
    }
    public void updateData(User user){
        String sql = "UPDATE users SET username = ?, password = ?, role = ? WHERE id = ?";
        try (PreparedStatement pstmt = connection.prepareStatement(sql)) {
            pstmt.setString(1, user.getUsername());
            pstmt.setString(2, user.getPassword());
            pstmt.setString(3, user.getRole().name());
            pstmt.setLong(4, user.getID());
        } catch (Exception e) {
            e.printStackTrace();
        }
    }
}
