package pl.edu.agh.po;

public enum UserRole {
    TECHNICIAN,
    CEO,
    ADMIN
}
