@startuml

class pl.edu.agh.po.AuthenticationService {
	{method} +login ( paramString1 : String , paramString2 : String ) : boolean
	{method} +logout () : void
}


class pl.edu.agh.po.BusinessManager {
	{method} +generateFullRaport () : String
}


class pl.edu.agh.po.CLIStyle {
	{method}  {static} +blue ( paramString1 : String ) : String
	{method}  {static} +green ( paramString1 : String ) : String
	{method}  {static} +red ( paramString1 : String ) : String
	{method}  {static} +yellow ( paramString1 : String ) : String
}


class pl.edu.agh.po.Controller {
	{field} {static} -$SWITCH_TABLE$pl$edu$agh$po$UserRole : [I
	{field} -adminPanel : javafx.scene.layout.VBox
	{field} -adminRoleLabel : javafx.scene.control.Label
	{field} -ceoPanel : javafx.scene.layout.VBox
	{field} -ceoRoleLabel : javafx.scene.control.Label
	{field} {static} -logger : java.util.logging.Logger
	{field} -loginMessageLabel : javafx.scene.control.Label
	{field} -loginPanel : javafx.scene.layout.VBox
	{field} -passwordField : javafx.scene.control.PasswordField
	{field} -technicianPanel : javafx.scene.layout.VBox
	{field} -technicianRoleLabel : javafx.scene.control.Label
	{field} -usernameField : javafx.scene.control.TextField
	{field} -welcomeAdminLabel : javafx.scene.control.Label
	{field} -welcomeCeoLabel : javafx.scene.control.Label
	{field} -welcomeTechnicianLabel : javafx.scene.control.Label
	{method}  {static} ~$SWITCH_TABLE$pl$edu$agh$po$UserRole () : [I
	{method} -handleAddDevice () : void
	{method} -handleAddUser () : void
	{method} -handleBlockUser () : void
	{method} -handleChangeConfiguration () : void
	{method} -handleCreateReport () : void
	{method} -handleDeleteDevice () : void
	{method} -handleExit () : void
	{method} -handleLogin () : void
	{method} -handleLogout () : void
	{method} -handleShowDatabase () : void
	{method} -handleShowDevices () : void
	{method} -hideAllPanels () : void
	{method} +initialize () : void
	{method}  {static} -lambda$0 ( paramTextField1 : javafx.scene.control.TextField , paramPasswordField2 : javafx.scene.control.PasswordField , paramButtonType3 : javafx.scene.control.ButtonType ) : javafx.util.Pair
	{method} -lambda$1 ( paramChoiceBox1 : javafx.scene.control.ChoiceBox , paramPair2 : javafx.util.Pair ) : void
	{method} -lambda$2 ( paramString1 : String ) : void
	{method}  {static} -lambda$3 ( paramButtonType1 : javafx.scene.control.ButtonType ) : String
	{method} -lambda$4 ( paramChoiceBox1 : javafx.scene.control.ChoiceBox , paramChoiceBox2 : javafx.scene.control.ChoiceBox , paramTextField3 : javafx.scene.control.TextField , paramTextField4 : javafx.scene.control.TextField , paramTextField5 : javafx.scene.control.TextField , paramTextField6 : javafx.scene.control.TextField , paramString7 : String ) : void
	{method} -lambda$5 ( paramString1 : String ) : void
	{method}  {static} -lambda$6 ( paramButtonType1 : javafx.scene.control.ButtonType , paramButtonType2 : javafx.scene.control.ButtonType ) : String
	{method} -lambda$7 ( paramDevice1 : pl.edu.agh.po.Device , paramString2 : String ) : void
	{method} -lambda$8 ( paramString1 : String ) : void
	{method} -setupLogging () : void
	{method}  {static} -lambda$handleAddDevice$0 ( paramButtonType1 : javafx.scene.control.ButtonType ) : String
	{method} -lambda$handleAddDevice$1 ( paramChoiceBox1 : javafx.scene.control.ChoiceBox , paramChoiceBox2 : javafx.scene.control.ChoiceBox , paramTextField3 : javafx.scene.control.TextField , paramTextField4 : javafx.scene.control.TextField , paramTextField5 : javafx.scene.control.TextField , paramTextField6 : javafx.scene.control.TextField , paramString7 : String ) : void
	{method}  {static} -lambda$handleAddUser$0 ( paramTextField1 : javafx.scene.control.TextField , paramPasswordField2 : javafx.scene.control.PasswordField , paramButtonType3 : javafx.scene.control.ButtonType ) : javafx.util.Pair
	{method} -lambda$handleAddUser$1 ( paramChoiceBox1 : javafx.scene.control.ChoiceBox , paramPair2 : javafx.util.Pair ) : void
	{method} -lambda$handleBlockUser$0 ( paramString1 : String ) : void
	{method} -lambda$handleChangeConfiguration$0 ( paramString1 : String ) : void
	{method}  {static} -lambda$handleChangeConfiguration$1 ( paramButtonType1 : javafx.scene.control.ButtonType , paramButtonType2 : javafx.scene.control.ButtonType ) : String
	{method} -lambda$handleChangeConfiguration$2 ( paramDevice1 : pl.edu.agh.po.Device , paramString2 : String ) : void
	{method} -lambda$handleDeleteDevice$0 ( paramString1 : String ) : void
	{method} -showAdminPanel () : void
	{method} -showCeoPanel () : void
	{method} -showLoginPanel () : void
	{method} -showTechnicianPanel () : void
}


class pl.edu.agh.po.Device {
	{field} +configuration : String
	{field} -hostName : String
	{field} -id : long
	{field} -model : String
	{field} -numberOfEthernetInterfaces : int
}


class pl.edu.agh.po.DeviceDAO {
	{field} {static} -connection : java.sql.Connection
	{method} -createTable () : void
	{method} +deleteByID ( paramlong1 : long ) : void
	{method} +findAll () : java.util.List
	{method} +findByID ( paramlong1 : long ) : pl.edu.agh.po.Device
	{method} +findByStatus ( paramDeviceStatus1 : pl.edu.agh.po.DeviceStatus ) : pl.edu.agh.po.Device
	{method} +findByType ( paramDeviceType1 : pl.edu.agh.po.DeviceType ) : pl.edu.agh.po.Device
	{method} +save ( paramDevice1 : pl.edu.agh.po.Device ) : void
	{method} +updateData ( paramDevice1 : pl.edu.agh.po.Device ) : void
}


enum pl.edu.agh.po.DeviceStatus {
	{field} +AVAILABLE
	{field} +BROKEN
	{field} +IN_USE
	{field} +MAINTANCE
}


enum pl.edu.agh.po.DeviceType {
	{field} +ACCESS_POINT
	{field} +ROUTER
	{field} +SWITCH
}


class pl.edu.agh.po.LoginData {
	{field} -password : String
	{field} -username : String
}


class pl.edu.agh.po.Main {
	{method}  {static} +main ( paramString;1 : [Ljava.lang.String; ) : void
	{method} +start ( paramStage1 : javafx.stage.Stage ) : void
}


class pl.edu.agh.po.PasswordEncryption {
	{method}  {static} +hash ( paramString1 : String ) : String
	{method}  {static} +verify ( paramString1 : String , paramString2 : String ) : boolean
}


class pl.edu.agh.po.User {
	{field} -id : long
	{field} -password : String
	{field} -username : String
}


class pl.edu.agh.po.UserDAO {
	{field} {static} -connection : java.sql.Connection
	{method} -createTable () : void
	{method} +deleteByID ( paramlong1 : long ) : void
	{method} +findALL () : java.util.List
	{method} +findByID ( paramlong1 : long ) : pl.edu.agh.po.User
	{method} +findByRole ( paramUserRole1 : pl.edu.agh.po.UserRole ) : pl.edu.agh.po.User
	{method} +findByUsername ( paramString1 : String ) : pl.edu.agh.po.User
	{method} +save ( paramUser1 : pl.edu.agh.po.User ) : void
	{method} +updateData ( paramUser1 : pl.edu.agh.po.User ) : void
}


enum pl.edu.agh.po.UserRole {
	{field} +ADMIN
	{field} +CEO
	{field} +TECHNICIAN
}




pl.edu.agh.po.AuthenticationService -->  pl.edu.agh.po.AuthenticationService : instance
pl.edu.agh.po.AuthenticationService -->  pl.edu.agh.po.User : currentUser
pl.edu.agh.po.AuthenticationService -->  pl.edu.agh.po.UserDAO : userDAO
pl.edu.agh.po.BusinessManager -->  pl.edu.agh.po.BusinessManager : instance
pl.edu.agh.po.Controller -->  pl.edu.agh.po.AuthenticationService : authService
pl.edu.agh.po.Controller -->  pl.edu.agh.po.BusinessManager : businessManager
pl.edu.agh.po.Controller -->  pl.edu.agh.po.DeviceDAO : deviceDAO
pl.edu.agh.po.Controller -->  pl.edu.agh.po.UserDAO : userDAO
pl.edu.agh.po.Device -->  pl.edu.agh.po.DeviceStatus : status
pl.edu.agh.po.Device -->  pl.edu.agh.po.DeviceType : type
pl.edu.agh.po.DeviceDAO -->  pl.edu.agh.po.DeviceDAO : instance
pl.edu.agh.po.User -->  pl.edu.agh.po.UserRole : role
pl.edu.agh.po.UserDAO -->  pl.edu.agh.po.UserDAO : instance


@enduml